fa-icons for external links except images

--- a/static/styles/lib/base.scss
+++ b/static/styles/lib/base.scss
@@ -304,3 +304,16 @@ form.inline {
 .position-absolute{
 	position: absolute !important;
 }
+
+//the following adds fa-share-square-o for each external link except images
+.section-course .content-block{
+	a:not( [href*='https://schul-cloud.org'] ):not( [href^='#'] ):not( [href^='/'] ){
+		&:not( [href$='.jpg'] ):not( [href$='.png'] ):not( [href$='.jpeg'] ):not( [href$='.gif'] ){
+			&:after{
+				font-family: 'FontAwesome';
+				content: "  \f08e";
+				font-size: .7em;
+			}
+		}
+	}
+}
