--- a/static/styles/lib/sc-theme/sc-card.scss
+++ b/static/styles/lib/sc-theme/sc-card.scss
@@ -12,7 +12,7 @@
     .tag {
         background: white;
         color: black;
-        margin: .5rem 0;
+        margin: .5rem 0 0 0;
         text-shadow: none;
         padding: 4px 8px;
     }
@@ -46,7 +46,7 @@
             }
             small {
                 font-size: 0.9rem;
-                margin: 0.5rem 0;
+                margin: .75rem 0 .5rem 0;
             }
             font-weight: 700;
             overflow: hidden;
