SC-443-Schullogo hochladen (#811)
* Prototype-upload works

* Prototype: image is saved in localStorage

* some styling

* Image updload and base64-encoding works

The uploaded image is scaled down and base64-encoded and saved as a relatively small 'text' in the database.

* js ausgelagert

* renaming

--- a/static/styles/administration/school.scss
+++ b/static/styles/administration/school.scss
@@ -8,3 +8,23 @@
   text-align: center;
   cursor: pointer;
 }
+
+#preview-logo {
+  display: inline-block;
+}
+
+#logo-canvas {
+  visibility: hidden;
+}
+
+#logo-input{
+  display: none;
+}
+
+#logo-filename{
+  margin-left: .5rem;
+}
+
+label {
+  margin-bottom: 0rem;
+}
