--- a/views/administration/school.hbs
+++ b/views/administration/school.hbs
@@ -3,6 +3,10 @@
         <link rel="stylesheet" href="/styles/administration/school.css"/>
     {{/content}}
 
+    {{#content "scripts" mode="append"}}
+        <script src="/scripts/administration/schools.js" type="text/javascript" defer></script>
+    {{/content}}
+
     {{#content "page"}}
         <div class="route-administration">
             <section class="section-school section-default">
@@ -19,6 +23,16 @@
                                     <div class="form-group">
                                         <label>Name der Schule</label>
                                         <input value="{{../school.name}}" type="text" class="form-control" name="name" placeholder="Einhorn Gymnasium" required />
+                                    </div>
+                                    
+                                    <div class="form-group">
+                                        <label>Schullogo hochladen</label><br/>
+                                        <input type="hidden" name="logo_dataUrl">
+                                        <input type="file" id="logo-input">
+                                        <label for="logo-input" class="btn btn-secondary">Datei auswählen</label>
+                                        <span id="logo-filename">Keine Datei ausgewählt</span>
+                                        <img id="preview-logo" src="">
+                                        <canvas id="logo-canvas" width="35" height="35" class="hidden"></canvas>
                                     </div>
 
                                     {{#if ../school.fileStorageType}}
