--- a/views/lib/loggedin.hbs
+++ b/views/lib/loggedin.hbs
@@ -208,7 +208,7 @@
                                         data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                                     <strong>{{ currentUser.displayName }} ({{ currentRole }})</strong>
                                 </button>
-                                <input type="hidden" name="sw-userid" id="sw-userid" value="{{ currentUser._id }}" />
+                                <input type="hidden" name="testUserGroup" id="testUserGroup" value="{{ currentUser.testGroup }}" />
                                 <div class="dropdown-menu dropdown-menu-right">
                                     <a class="dropdown-item" href="/account/">Einstellungen</a>
                                     <a class="dropdown-item" href="/logout/">Abmelden</a>
