--- a/views/homework/components/overview_card_template.hbs
+++ b/views/homework/components/overview_card_template.hbs
@@ -34,7 +34,7 @@
     <a class="content" href="{{this.url}}" title="Details der Aufgabe: '{{{this.name}}}'"> 
         <h5 class="title">
             {{#if this.courseId}}
-                [<span>{{this.courseId.name}}</span>{{#if this.isSubstitution}} <sub>Vertretung</sub>{{/if}}] -
+                [<span>{{{stripOnlyScript this.courseId.name}}}</span>{{#if this.isSubstitution}} <sub>Vertretung</sub>{{/if}}] -
             {{/if}}
             {{{ stripOnlyScript this.name }}}
         </h5>
