--- a/views/homework/components/overview_card_template.hbs
+++ b/views/homework/components/overview_card_template.hbs
@@ -31,12 +31,12 @@
             </div>
         </a>
     {{/if}}
-    <a class="content" href="{{this.url}}" title="Details der Aufgabe: '{{this.name}}'"> 
+    <a class="content" href="{{this.url}}" title="Details der Aufgabe: '{{{this.name}}}'"> 
         <h5 class="title">
             {{#if this.courseId}}
-                [<span>{{this.courseId.name}}</span>{{#if this.isSubstitution}} <sub>Vertretung</sub>{{/if}}] -
+                [<span>{{{stripOnlyScript this.courseId.name}}}</span>{{#if this.isSubstitution}} <sub>Vertretung</sub>{{/if}}] -
             {{/if}}
-            {{this.name}}
+            {{{ stripOnlyScript this.name }}}
         </h5>
         <div class="ckcontent">
             {{#if this.description}}
@@ -80,11 +80,11 @@
                        target="_blank"
                        data-method="{{this.method}}"
                        data-name="{{../../name}}"
-                       title="Die Aufgabe: '{{../../name}}' {{this.title}}.">
+                       title="Die Aufgabe: '{{{ ../../name}}}' {{this.title}}.">
                         <i class="fa fa-{{this.icon}}"></i>
                     </a>
                 {{else}}
-                    <a class="btn btn-secondary btn-sm {{this.class}}" href="{{this.link}}" title="Die Aufgabe: '{{../../name}}' {{this.title}}">
+                    <a class="btn btn-secondary btn-sm {{this.class}}" href="{{this.link}}" title="Die Aufgabe: '{{{ ../../name}}}' {{this.title}}">
                         <i class="fa fa-{{this.icon}}"></i> {{this.label}}
                     </a>
                 {{/if}}
