--- a/views/calendar/forms/form-create-event.hbs
+++ b/views/calendar/forms/form-create-event.hbs
@@ -1,4 +1,7 @@
 <input name="scopeId" type="hidden" data-force-value="true" value="{{userId}}" />
+{{#if teamId}}
+    <input name="teamId" type="hidden" data-force-value="true" value="{{teamId}}" />
+{{/if}}
 
 <div class="form-group">
     <label class="control-label" for="title">Titel</label>
@@ -23,20 +26,22 @@
     <label class="control-label" for="location">Ort</label>
     <input class="form-control" name="location" placeholder="z.B. Turnhalle">
 </div>
-{{#userHasPermission "COURSE_EDIT"}}
-<div class="form-group create-course-event">
-    <div class="checkbox disabled">
-        <label>
-            Für Kurs anlegen?
-            <input name="isCourseEvent" type="checkbox" data-collapseRef="collapse{{../collapseId}}" data-toggle="toggle" data-on="Ja" data-off="Nein">
-        </label>
-    </div>
-    <div id="collapse{{../collapseId}}" class="panel-collapse collapse">
-        <div class="form-group">
-            <select class="course-selection form-control" name="courseId">
-                <option value="" selected hidden>Wähle einen Kurs...</option>
-            </select>
+{{#if addCourse}}
+    {{#userHasPermission "COURSE_EDIT"}}
+    <div class="form-group create-course-event">
+        <div class="checkbox disabled">
+            <label>
+                Für Kurs anlegen?
+                <input name="isCourseEvent" type="checkbox" data-collapseRef="collapse{{../collapseId}}" data-toggle="toggle" data-on="Ja" data-off="Nein">
+            </label>
+        </div>
+        <div id="collapse{{../collapseId}}" class="panel-collapse collapse">
+            <div class="form-group">
+                <select class="course-selection form-control" name="courseId">
+                    <option value="" selected hidden>Wähle einen Kurs...</option>
+                </select>
+            </div>
         </div>
     </div>
-</div>
-{{/userHasPermission}}
+    {{/userHasPermission}}
+{{/if}}
