--- a/views/teams/team.hbs
+++ b/views/teams/team.hbs
@@ -1,11 +1,14 @@
-{{#extend "lib/loggedin"}}
 
+{{#extend "lib/loggedin"}}
     {{#content "styles" mode="append"}}
         <link rel="stylesheet" href="/styles/files/files.css"/>
         <link rel="stylesheet" href="/vendor/jquery/jquery-ui.css"/>
         <style>
             .section-teams .section-news .container-fluid {
                 padding: 0;
+            }
+            .section-teams h4 {
+                margin-bottom: 1rem;
             }
             .section-teams .lead:empty {
                 margin-bottom: 0
@@ -16,6 +19,34 @@
             .section-teams .files {
                 margin-bottom: 10px;
             }
+
+            .create-course-event {
+                label {
+                    margin-right: 0.5rem;
+                }
+                .toggle {
+                    height: 2rem !important;
+                    width: 7rem !important;
+                    .toggle-handle {
+                        width: 0.3rem !important;
+                        background: whitesmoke !important;
+                    }
+                }
+
+                .off {
+                    background: grey !important;
+                    label {
+                        color: whitesmoke !important;
+                        padding-left: 48px !important;
+                    }
+                }
+
+                .on {
+                    label {
+                        padding-right: 48px !important;
+                    }
+                }
+            }
         </style>
     {{/content}}
 
@@ -23,6 +54,7 @@
         <script src="/scripts/jquery/jquery-ui.min.js" type="text/javascript" defer></script>
         <script src="/scripts/jquery/jquery.ui.touch-punch.js" type="text/javascript" defer></script>
         <script src="/scripts/files.js" type="text/javascript" defer></script>
+        <script src="/scripts/teams.js" type="text/javascript" defer></script>
     {{/content}}
 
     {{#content "page"}}
@@ -79,14 +111,16 @@
                 <div class="col-sm-12">
                     <h4>Termine</h4>
                     {{> 'calendar/card'}}
-                    <a style="margin-top: 0.5rem" href="/teams/{{../_id}}/events" class="btn btn-add btn-secondary">
-                        Zur Termin-Übersicht
-                    </a>
-                    {{!-- {{#inArray "CREATE_NEWS" permissions}}
-                        <a href="/teams/{{../_id}}/event/add" class="btn btn-add btn-primary">
-                            Termin anlegen
+                    <div style="margin-top: .5rem">
+                        <a href="/teams/{{../_id}}/events" class="btn btn-add btn-secondary">
+                            Zur Termin-Übersicht
                         </a>
-                    {{/inArray}} --}}
+                        {{#inArray "CREATE_NEWS" permissions}}
+                            <button class="btn btn-add btn-primary btn-create-event">
+                                Termin anlegen
+                            </button>
+                        {{/inArray}}
+                    </div>
                 </div>
             </section>
 
@@ -133,6 +167,12 @@
                             Löschen
                         </button>
                     </div>
+                {{/content}}
+            {{/embed}}
+
+            {{#embed "lib/components/modal-form" class="create-event-modal" action="/calendar/events/" collapseId=1 userId=userId teamId=teamId}}
+                {{#content "fields"}}
+                    {{> "calendar/forms/form-create-event"}}
                 {{/content}}
             {{/embed}}
 
