added basic live-search (without styling)

--- a/views/help/help.hbs
+++ b/views/help/help.hbs
@@ -5,10 +5,27 @@
     {{/content}}
 
     {{#content "scripts" mode="append"}}
-
+        <script src="/scripts/help.js" type="text/javascript" defer></script>
     {{/content}}
 
     {{#content "page"}}
+        
+        <div class="live-search">
+            <template>
+                <a href="https://docs.schul-cloud.org/pages/viewpage.action?pageId=${id}" target="_blank">
+                    <div>
+                        <b class="text-primary">${title}</b><br/>
+                        <span class="text-muted">${short_description}</span>
+                    </div>
+                </a>
+            </template>
+
+            <input type="text" placeholder="search..." autocomplete="false">
+            <div class="live-search-results">
+                {{! the template will be inserted (populated with content) here}}
+            </div>
+        </div>
+
         <section class="faqpanel">
             <div class="container-fluid">
                 {{#if this.currentSchoolData.pilot}}
@@ -159,7 +176,7 @@
                                          role="tabpanel" aria-labelledby="heading-{{@index}}"
                                          {{#ifeq @index 0}}aria-expanded="true"{{/ifeq}}>
                                         <div class="card-block">
-                                            {{{this.body}}}
+                                            <noscript class="lazyload">{{{this.body}}}</noscript>
                                         </div>
                                         <div class="card-footer">
                                             <a href="{{this.url}}" target="_blank">Weiterlesen</a>
