--- a/views/help/confluence.hbs
+++ b/views/help/confluence.hbs
@@ -1,11 +1,12 @@
+
+
 {{#extend "lib/loggedin"}}
 
     {{#content "styles" mode="append"}}
         <link rel="stylesheet" href="/styles/help/help.css"/>
     {{/content}}
 
-
     {{#content "page"}}
-        <iframe class="full" src="https://blog.schulcloud.org/faq/" frameborder="0"></iframe>
+        <iframe class="full" src="https://docs.schul-cloud.org/pages/viewpage.action?pageId={{articleId}}&frameable=true" frameborder="0"></iframe>
     {{/content}}
 {{/extend}}
