--- a/views/help/help.hbs
+++ b/views/help/help.hbs
@@ -11,8 +11,8 @@
     {{#content "page"}}
         
         <div class="live-search">
-            <template>
-                <a href="https://docs.schul-cloud.org/pages/viewpage.action?pageId=${id}" target="_blank">
+            <template class="result">
+                <a href="/help/confluence/${id}" target="_blank">
                     <div>
                         <b class="text-primary">${title}</b><br/>
                         <span class="text-muted">${short_description}</span>
@@ -20,7 +20,7 @@
                 </a>
             </template>
 
-            <input type="text" placeholder="search..." autocomplete="false">
+            <input class="search" type="text" placeholder="search..." autocomplete="false">
             <div class="live-search-results">
                 {{! the template will be inserted (populated with content) here}}
             </div>
