enabled eMail change

--- a/views/account/settings.hbs
+++ b/views/account/settings.hbs
@@ -38,7 +38,7 @@
 
                 <div class="form-group">
                     <label>E-Mail-Adresse</label>
-                    <input type="email" class="form-control" name="email" value="{{ currentUser.email }}" readonly>
+                    <input type="email" class="form-control" name="email" value="{{ currentUser.email }}">
                 </div>
 
                 <div class="form-group">
