--- a/views/teams/edit-team.hbs
+++ b/views/teams/edit-team.hbs
@@ -21,6 +21,10 @@
             <form action="{{action}}" method="post">
                 <input name="schoolId" type="hidden" data-force-value="true" value="{{currentSchool}}"/>
 
+                {{#if method}}
+                    <input type="hidden" name="_method" data-force-value="true" value="{{method}}"/>
+                {{/if}}
+
                 <div class="form-group">
                     <label>Name des Teams</label>
                     <input class="form-control" name="name" type="text" placeholder="A-Team" value="{{course.name}}"
