--- a/views/courses/course.hbs
+++ b/views/courses/course.hbs
@@ -128,7 +128,7 @@
                             </div>
                         {{else}}
                             <p class="text-muted list-group-item list-group-item-action flex-column align-items-start">
-                                <span>Keine Themen</span>
+                                <span>Noch keine Themen</span>
                             </p>
                         {{/if}}
                     </div>
@@ -171,7 +171,7 @@
                             {{/each}}
                         {{else}}
                             <p class="text-muted list-group-item list-group-item-action flex-column align-items-start">
-                                <span>Keine Tools</span>
+                                <span>Noch keine Tools</span>
                             </p>
                         {{/if}}
                     </div>
