--- a/views/courses/overview.hbs
+++ b/views/courses/overview.hbs
@@ -15,7 +15,7 @@
                     <div class="col-xs-12">
                         <p class="text-muted">
                             <i class="fa fa-frown-o"></i>
-                            <span>Keine Kurse</span>
+                            <span>Noch keine Kurse</span>
                         </p>
                     </div>
                 {{/if}}
@@ -28,7 +28,7 @@
                         {{else}}
                             <div class="col-xs-12">
                                 <p class="text-muted">
-                                    <span>Keine Kurse</span>
+                                    <span>Keine Vertretungen</span>
                                 </p>
                             </div>
                         {{/if}}
