--- a/static/styles/team/team.scss
+++ b/static/styles/team/team.scss
@@ -1,6 +1,9 @@
 @import '../lib/colors';
 
 .section-team {
+  h4 {
+     margin-bottom: 1rem;
+  }
   .team-container {
     box-sizing: border-box;
     max-width: 1400px;
