--- a/views/calendar/card.hbs
+++ b/views/calendar/card.hbs
@@ -27,25 +27,23 @@
 }
 </style>
 
-<div class="events-card">
-  <div class="row">
-    <div class="col-lg-6 col-xl-4">
-      <div class="card">
-        <div class="row row-striped">
-          <div class="col-xs-3 text-right date-info">
-            <h1><span class="badge badge-secondary">19</span></h1>
-            <h3>OKT</h3>
-          </div>
-          <div class="col-xs-9">
-            <h4><strong>Freibier Friday</strong></h4>
-            <ul class="list-inline">
-                <li class="list-inline-item"><i class="fa fa-calendar-o" aria-hidden="true"></i> Montag</li>
-              <li class="list-inline-item"><i class="fa fa-clock-o" aria-hidden="true"></i> 12:30 - 14:00</li>
-              <li class="list-inline-item"><i class="fa fa-location-arrow" aria-hidden="true"></i> Campus</li>
-            </ul>
-            <p>Freibier für alle! Sponsored by HPI 😁</p>
-          </div>
-        </div>
+<div class="events-card col-lg-6 col-xl-4">
+  <div class="card">
+    <div class="row row-striped">
+      <div class="col-xs-3 text-right date-info">
+        <h1><span class="badge badge-secondary">19</span></h1>
+        <h3>{{event.month}}</h3>
+      </div>
+      <div class="col-xs-9">
+        <h4><strong>{{event.title}}</strong></h4>
+        <ul class="list-inline">
+            <li class="list-inline-item"><i class="fa fa-calendar-o" aria-hidden="true"></i> {{event.dayOfTheWeek}}</li>
+          <li class="list-inline-item"><i class="fa fa-clock-o" aria-hidden="true"></i> {{event.fromTo}} Uhr</li>
+          {{#if event.location}}
+            <li class="list-inline-item"><i class="fa fa-location-arrow" aria-hidden="true"></i> {{event.location}}</li>
+          {{/if}}
+        </ul>
+        <p>{{event.description}}</p>
       </div>
     </div>
   </div>
