Tobias/sw precache logging (#779)
* workbox added

* added workbox build to gulpfile

* installl service worker on login

* inject manifest only into prepared service worker

* resolve dashboard and calendar from cache

* handle background update of events

* networkFirst for news section enabled

* update calendar on events change after load

* record rendering metrics

* updated gulpfile patterns for service worker

* send analytics logs of page creation to server

* added connection type

* disable sw

* ignore changes for calendar

* Revert "disable sw"

This reverts commit d300fb15d5ac2885f59ce9b6a7c24b52d64c178f.

* cleanup sw

* recvert calendar

* modify requests

* cleanup comments

* differentiate from local requests

* formatting

* downlink added to statistical metrics

* do not install service worker by default

* revert sw

* reset gulpfile merge failure

* allow logging

* ignore line ending for binary files

* fix package lock file

* enable winston logger

* add sw enabled to sw fetch request on /logs/ controller

* added sw workbox locally

* fix response of logs request in service worker

* fix spelling

* disable sw on logout of client user

* gulp recreate service worker on change

* enable service worker for half of users only

* added service worker workbox

* added userid to hidden fields

* clear caches on logout

* cache templated urls

* ignore sw-workbox files in webpack

* apply stalewhilerevalidate for calendar events

* add missing files for calendar

* service renamed

* added ressources of news and dashboard to precache

* removed some comments

* add images and some pages to cache

* show offline alert if not online

* staleWhileRevalidate Giphy

* queue logging requests if offline

* send response on cache

* formatting

* check online state on page load

* logging enabled for dashboard, news, and calendar only

* convert l

--- a/views/lib/loggedin.hbs
+++ b/views/lib/loggedin.hbs
@@ -73,6 +73,11 @@
                 <i class="fa fa-bars"></i>
             </a>
             <div class="content-min-height">
+                <section class="demo" id="offlineAlert" style="display:none;">
+                    <div class="alert alert-warning" role="alert">
+                        <p>Du bist offline. <span class="hidden-md-down">Um dir trotzdem etwas anzuzeigen siehst du eventuell veraltete Inhalte.</span></p>
+                    </div>
+                </section>
                 {{#ifeq currentRole "Demo"}}
                     <section class="demo">
                         <div class="alert alert-warning" role="alert">
@@ -206,6 +211,7 @@
                                         data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                                     <strong>{{ currentUser.displayName }} ({{ currentRole }})</strong>
                                 </button>
+                                <input type="hidden" name="testUserGroup" id="testUserGroup" value="{{ currentUser.testGroup }}" />
                                 <div class="dropdown-menu dropdown-menu-right">
                                     <a class="dropdown-item" href="/account/">Einstellungen</a>
                                     <a class="dropdown-item" href="/logout/">Abmelden</a>
