--- a/views/lib/loggedin.hbs
+++ b/views/lib/loggedin.hbs
@@ -12,9 +12,7 @@
         <script src="/scripts/loggedin.js" type="text/javascript" defer></script>
         <script type="text/javascript" src="/vendor/MathJax/MathJax.js?config=TeX-AMS_HTML" defer></script>
         <script type="text/javascript" src="/vendor/introjs/intro.min.js" defer></script>
-
-        <script type="text/javascript" src="https://unpkg.com/@feathersjs/client@3.5.1/dist/feathers.js" defer></script>
-    
+        <script type="text/javascript" src="/vendor/feathersjs/feathers.js" defer></script>
     {{/content}}
 
     {{#content "body"}}
