--- a/views/courses/edit-course.hbs
+++ b/views/courses/edit-course.hbs
@@ -111,7 +111,7 @@
                         <div class="panel-heading">
                             <a data-toggle="collapse" href="#collapse1" class="collapse-toggle"><label>Termine auswählen</label><i class="fa fa-chevron-right collapse-icon" aria-hidden="true"></i></a>
                         </div>
-                        <div id="collapse1" class="panel-collapse collapse">
+                        <div id="collapse1" class="panel-collapse collapse in">
                             <div class="times">
                                 <label>Zeitraum (z.B. Schuljahr)</label>
                                 <div class="row">
@@ -175,7 +175,7 @@
 
 
                 <div class="modal-footer">
-                    <button class="btn btn-add btn-secondary btn-cancel">
+                    <button class="btn btn-secondary btn-cancel">
                         {{closeLabel}}
                     </button>
 
