--- a/views/lib/loggedin.hbs
+++ b/views/lib/loggedin.hbs
@@ -6,9 +6,8 @@
     {{/content}}
 
     {{#content "scripts" mode="append"}}
-        <script type="text/javascript" src="https://www.gstatic.com/firebasejs/3.9.0/firebase-app.js" defer></script>
-        <script type="text/javascript" src="https://www.gstatic.com/firebasejs/3.9.0/firebase-messaging.js"
-                defer></script>
+        <script type="text/javascript" src="/vendor/firebasejs/3.9.0/firebase-app.js" defer></script>
+        <script type="text/javascript" src="/vendor/firebasejs/3.9.0/firebase-messaging.js" defer></script>
         <script src="/scripts/loggedin.js" type="text/javascript" defer></script>
         <script type="text/javascript" src="/vendor/MathJax/MathJax.js?config=TeX-AMS_HTML" defer></script>
         <script type="text/javascript" src="/vendor/introjs/intro.min.js" defer></script>
