set online or offline in general by onLine state

--- a/static/styles/lib/loggedin.scss
+++ b/static/styles/lib/loggedin.scss
@@ -690,3 +690,11 @@ footer {
         display: none;
     }
 }
+
+aside.nav-sidebar nav ul li a.isOffline .link-name {
+    color: red;
+}
+
+aside.nav-sidebar nav ul li a.isOnline .link-name {
+    color: green;
+}
