showing, editing and creating team events on calendar page is finally working ✅

--- a/views/calendar/calendar.hbs
+++ b/views/calendar/calendar.hbs
@@ -16,16 +16,16 @@
         </div>
 
         {{#userHasPermission "CALENDAR_EVENT_CREATE"}}
-        {{#embed "lib/components/modal-form" class="create-event-modal" action="/calendar/events/" collapseId=1 userId=../userId}}
+        {{#embed "lib/components/modal-form" class="create-event-modal" action="/calendar/events/" userId=../userId}}
             {{#content "fields"}}
-                {{> "calendar/forms/form-create-event" addCourse="true"}}
+                {{> "calendar/forms/form-create-event" addCourse="true" addTeam="true" collapseIdCourse="2" collapseIdTeam="3"}}
             {{/content}}
         {{/embed}}
         {{/userHasPermission}}
 
-        {{#embed "lib/components/modal-form" method="put" class="edit-event-modal" collapseId=2}}
+        {{#embed "lib/components/modal-form" method="put" action="/calendar/events/" class="edit-event-modal"}}
             {{#content "fields"}}
-                {{> "calendar/forms/form-create-event"}}
+                {{> "calendar/forms/form-create-event" addCourse="true" addTeam="true" collapseIdCourse="4" collapseIdTeam="5"}}
             {{/content}}
             {{#content "additional-actions"}}
                     <button type="button" class="btn btn-primary btn-danger btn-delete">
