--- a/views/teams/team.hbs
+++ b/views/teams/team.hbs
@@ -20,7 +20,7 @@
                 margin-bottom: 10px;
             }
 
-            .create-course-event {
+            .create-course-event, .create-team-event {
                 label {
                     margin-right: 0.5rem;
                 }
