--- a/views/help/help.hbs
+++ b/views/help/help.hbs
@@ -107,7 +107,7 @@
                                 </div>
                             </div>
                             <div class="card-footer" style="position: absolute; bottom: 0px; width: 100%;">
-                                <a href="#" target="_blank" class="btn btn-primary submit-problem">Problem melden</a>
+                                <a href="#" target="_blank" class="btn btn-primary submit-contactAdmin">Problem melden</a>
                             </div>
                         </div>
                     </div>
