--- a/views/lib/forms/form-contactAdmin.hbs
+++ b/views/lib/forms/form-contactAdmin.hbs
@@ -16,7 +16,7 @@
     </textarea>
 </div>
 <div class="form-group">
-    <select data-placeholder="Kategorie wählen" class="form-control" name="category" id="category">
+    <select data-placeholder="Kategorie wählen (optional)" class="form-control" name="category" id="category">
         <optgroup label="Bereich">
             <option value="dashboard">Übersicht</option>
             <option value="courses">Kurse</option>
