--- a/views/lib/forms/form-contactHPI.hbs
+++ b/views/lib/forms/form-contactHPI.hbs
@@ -4,7 +4,7 @@
 
 <div class="form-group">
     <select name="feedbackType" id="feedbackType" type="text" class="form-control form-control-lg" required >
-        <option value="wish" selected>Wunsch ans HPI senden</option>
+        <option value="userstory" selected>Wunsch ans HPI senden</option>
         <option value="problem">Problem ans HPI senden</option>
     </select>
 </div>
@@ -49,7 +49,7 @@
 </div>
 
 <div class="form-group">
-    <select name="category" id="category" data-placeholder="Bereich auswählen" class="chosen-select" tabindex="-1">
+    <select name="category" id="category" data-placeholder="Bereich auswählen (optional)" class="chosen-select" tabindex="-1">
         <option value="dashboard">Übersicht</option>
         <option value="courses">Kurse</option>
         <option value="classes">Klassen</option>
