--- a/theme/default/style.scss
+++ b/theme/default/style.scss
@@ -2,5 +2,6 @@ $primaryColor: #b10438;
 $secondaryColor: #e2661d;
 $accentColor: #f8a41b;
 $logoGradient: linear-gradient(35deg, #b1063a 35%, #f6a800);
+$fontColor: #373a3c;
 
 $logoBackground: url("../../images/logo/cloud-transparent-mono.svg") no-repeat center;
