changed border radius to no radius

--- a/static/styles/lib/loggedin.scss
+++ b/static/styles/lib/loggedin.scss
@@ -231,7 +231,7 @@ aside.nav-sidebar {
                         //color: #fff !important;
                         background: rgba(0,0,0,0.1);
                         cursor: pointer;
-                        border-radius: 3px;
+                        //border-radius: 3px;
                     }
 
                     i.fa {
