--- a/theme/default/style.scss
+++ b/theme/default/style.scss
@@ -1,7 +1,13 @@
 $primaryColor: #b10438;
 $secondaryColor: #e2661d;
 $accentColor: #f8a41b;
-$logoGradient: linear-gradient(35deg, #b1063a 35%, #f6a800);
 $fontColor: #373a3c;
+
+$logoGradient: linear-gradient(35deg, #b1063a 35%, #f6a800);
+
+$colorBeige: #e6e2e2;
+$colorGrey: rgba(232, 232, 232, 0.5);
+$colorLightGrey: rgba(0,0,0,0.1);
+$colorWhite: #fff;
 
 $logoBackground: url("../../images/logo/cloud-transparent-mono.svg") no-repeat center;
