--- a/static/styles/lib/loggedin.scss
+++ b/static/styles/lib/loggedin.scss
@@ -144,7 +144,7 @@ aside.nav-sidebar {
             width: 100%;
             height: 100vh;
             overflow: auto;
-            background: white;
+            background: $colorWhite;
             box-shadow: 0 2px 5px rgba(0,0,0,.26);
             transform: translateY(-102%);
             transition: transform .3s ease-in-out;
