create component card +styling

--- a/views/help/help.hbs
+++ b/views/help/help.hbs
@@ -13,5 +13,11 @@
         {{> "help/search"}}
         {{> "help/contact"}}
 
+        {{#embed "help/component-card" title="First Test Card"}}
+            {{#content "card-body"}}
+                <p>Test Content</p>
+            {{/content}}
+        {{/embed}}
+
     {{/content}}
 {{/extend}}
