--- a/views/lib/loggedin.hbs
+++ b/views/lib/loggedin.hbs
@@ -40,7 +40,7 @@
                     </li>
                     {{#each sidebarItems}}
                         <li data-step={{this.introNumber}} data-intro="{{this.introText}}">
-                            <a class="{{this.class}} offline" href="{{this.link}}"
+                            <a class="{{this.class}}" href="{{this.link}}"
                                  title="{{this.name}}">
                                 <i class="fa fa-{{this.icon}}" aria-hidden="true"></i>
                                 <span class="link-name">{{this.name}}</span>
@@ -51,7 +51,7 @@
                                     <ul class="subitems">
                                         {{#each this.children}}
                                             <li>
-                                                <a class="subitem {{this.class}} offline" href="{{this.link}}"
+                                                <a class="subitem {{this.class}}" href="{{this.link}}"
                                                     title="{{this.name}}">
                                                     <i class="fa fa-{{this.icon}}" aria-hidden="true"></i>
                                                     <span class="link-name">{{this.name}}</span>
