offline class removed

--- a/views/lib/components/sc-card.hbs
+++ b/views/lib/components/sc-card.hbs
@@ -36,7 +36,7 @@
         {{truncateHTML (conflictFreeHtml this.content)}}
     </div>
     <div class="sc-card-footer">
-        <a href="{{url}}" rel="canonical" class="offline">{{{link-text}}}</a>
+        <a href="{{url}}" rel="canonical">{{{link-text}}}</a>
         {{#if additionalInfoName}}
             <div class="additionalInfo" >
                 {{> (concat 'lib/sc-card_additionalInfo/' additionalInfoName) }}
