--- a/views/teams/forms/form-add-member.hbs
+++ b/views/teams/forms/form-add-member.hbs
@@ -1,5 +1,27 @@
-<div style="margin-bottom: 12rem" class="form-group">
-    <label for="invitation">Füge Lehrer und Schüler deiner Schule zum Team hinzu</label>
+<div class="form-group form-classes">
+    <label>Klasse(n) <small>(Nach dem Speichern werden alle Schüler automatisch hinzugefügt!)</small></label>
+
+    <select name="classIds[]" multiple data-placeholder="Klasse(n) auswählen">
+        {{#each classes}}
+            <option value="{{this._id}}" {{#if this.selected}}selected{{/if}}>
+                {{log this.year}}
+                {{#if this.name}}
+                    {{this.displayName}}
+                {{else}}
+                    {{this.name}}
+                {{/if}}
+
+                {{#if this.year}}
+                    ({{this.year.name}})
+                {{/if}}
+            </option>
+        {{/each}}
+    </select>
+</div>
+
+<div style="margin-bottom: 12rem" class="form-group form-users">
+    <label for="invitation">Füge Lehrer und Schüler oder ganze Klassen deiner Schule zum Team hinzu</label>
+
     <select name="userIds[]" multiple data-placeholder="Personen auswählen">
         {{#each users}}
             <option value="{{this._id}}" {{#if this.selected}}selected{{/if}}>
